--- a/package.json
+++ b/package.json
@@ -18,8 +18,16 @@
   },
   "homepage": "https://github.com/aprilyanggarwood/pets-r-us#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "express-session": "^1.17.3",
+    "mongoose": "^6.4.1",
+    "nodemon": "^2.0.16",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2"
   }
 }
