--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "moment": "^2.29.4",
     "mongoose": "^6.4.1",
     "nodemon": "^2.0.16",
     "passport": "^0.6.0",
