--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "helmet": "^5.1.0",
     "moment": "^2.29.4",
     "mongoose": "^6.4.1",
     "nodemon": "^2.0.16",
