--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "flash": "^1.1.0",
     "helmet": "^5.1.0",
     "moment": "^2.29.4",
     "mongoose": "^6.4.1",
