--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "csurf": "^1.11.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "flash": "^1.1.0",
     "helmet": "^5.1.0",
