--- a/package.json
+++ b/package.json
@@ -34,5 +34,12 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  },
+  "engines": {
+    "node": "v16.15.0",
+    "npm": "8.5.5"
   }
 }
